workshop-demo-1-rag/yaml/yaml-2-deployment-inference-server.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: hf-text-generation-inference-server
 namespace: llm-rag
 labels:
   app: hf-text-generation-inference-server
spec:
 replicas: 1
 selector:
   matchLabels:
     app: hf-text-generation-inference-server
 template:
   metadata:
     labels:
       app: hf-text-generation-inference-server
   spec:
     restartPolicy: Always
     schedulerName: default-scheduler
     terminationGracePeriodSeconds: 120
     containers:
       - resources:
           limits:
             cpu: '12'
             memory: 36Gi
             nvidia.com/gpu: '1'
           requests:
             cpu: '12'
             memory: 36Gi
             nvidia.com/gpu: '1'
         terminationMessagePath: /dev/termination-log
         name: server
         securityContext:
           runAsUser: 1000720001
           capabilities:
             drop:
               - ALL
           runAsNonRoot: true
           allowPrivilegeEscalation: false
           seccompProfile:
             type: RuntimeDefault
         ports:
           - name: http
             containerPort: 3000
             protocol: TCP
         imagePullPolicy: IfNotPresent
         volumeMounts:
           - name: models-cache
             mountPath: /models-cache
           - name: shm
             mountPath: /dev/shm
         terminationMessagePolicy: File
         image: 'ghcr.io/huggingface/text-generation-inference:1.1.0'
     volumes:
       - name: models-cache
         persistentVolumeClaim:
           claimName: models-cache
       - name: shm
         emptyDir:
           medium: Memory
           sizeLimit: 1Gi
     dnsPolicy: ClusterFirst
