workshop-demo-1-rag/yaml/yaml-3-inference-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hf-text-generation-inference-server
  namespace: llm-rag
  labels:
    app: hf-text-generation-inference-server
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: hf-text-generation-inference-server
