workshop-demo-1-rag/yaml/yaml-1-4-chat-doc-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: chat-doc-v1
  namespace: llm-rag
spec:
  to:
    kind: Service
    name: chat-doc-v1
    weight: 100
  port:
    targetPort: 8501-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
