workshop-demo-1-rag/yaml/yaml-4-inference-server-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hf-text-generation-inference-server
  namespace: llm-rag
  labels:
    app: hf-text-generation-inference-server
spec:
  to:
    kind: Service
    name: hf-text-generation-inference-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
